# xgbtest

./: .gitignore  CMakeLists.txt  LgbTest.cpp  LgbTest.h  XgbTest.cpp  XgbTest.h  main.cpp
data/: binary_model  data.csv  gbm_binary_model  lgb.pred  std.pred
xgboost/lib/cmake/dmlc/: DMLCTargets.cmake
xgboost/lib/cmake/xgboost/: XGBoostTargets-release.cmake  XGBoostTargets.cmake  xgboost-config-version.cmake
